--- a/front/home.html
+++ b/front/home.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <div class="container">
-    <img src="/resource/shefmark.jpg" alt="" style="height: 100px;">
-    <div>
-      <h1>OurShef</h1>
-    </div>
-    <div>
-      <div>믿을 수 없는 후기는 이제 그만!</div>
-      <div>우리끼리 맛집 공유!</div>
-    </div>
-    <button class="button-home-join" onclick="location.href='/member/join.html'">
-      회원가입
-    </button>
-    <button class="button-home-login" onclick="location.href='/login/loginForm.html'">
-      로그인
-    </button>
-  </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="bootstrap-theme.css">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body class="home">
+        <div class=".container-fluid text-center">
+            <div class="row">
+                <img class="img-circle" src="/img/shefmark.jpg" alt="" style="height: 100px;">
+            </div>
+            <div class="row">
+                <h1 class="text-primary">OurShef</h1>
+            </div>
+            <div class="row text-muted">
+                <div>믿을 수 없는 후기는 이제 그만!</div>
+                <div>우리끼리 맛집 공유!</div>
+            </div>
+            <div class="row">
+                <div>
+                    <button class="btn btn-primary" onclick="location.href='/member/join.html'">
+                        회원가입
+                    </button>
+                </div>
+                <div>
+                    <button class="btn btn-primary" onclick="location.href='/login/loginForm.html'">
+                        로그인
+                    </button>
+                </div>
+            </div>
+        </div>
+        <script src="js/bootstrap.js"></script>
+    </body>
 </html>
