--- a/front/copyMe.html
+++ b/front/copyMe.html
@@ -16,6 +16,10 @@
         <link rel="stylesheet" href="../js/slick/slick.css">
         <link rel="stylesheet" href="../js/slick/slick-theme.css">
 
+        <!--font awesome-->
+        <link rel="stylesheet" href="../js/fontawesome/all.min.css">
+        <script src="../js/fontawesome/all.js"></script>
+
         <!--custom-->
         <link rel="stylesheet" href="../style.css">
 
