--- a/front/spot/spot.html
+++ b/front/spot/spot.html
@@ -1,40 +1,102 @@
 <!DOCTYPE html>
-<html lang="ko">  
+<html lang="ko">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!--jQuery-->
+        <script src="../js/jquery-2.1.4.js"></script>
+
+        <!--부트 스트랩-->
         <link rel="stylesheet" href="../bootstrap.css">
         <link rel="stylesheet" href="../bootstrap-theme.css">
+
+        <!-- slick slider-->
+        <link rel="stylesheet" href="../js/slick/slick.css">
+        <link rel="stylesheet" href="../js/slick/slick-theme.css">
+
+        <!--font awesome-->
+        <link rel="stylesheet" href="../js/fontawesome/all.min.css">
+        <script src="../js/fontawesome/all.js"></script>
+
+        <!--custom-->
+        <link rel="stylesheet" href="../style.css">
+
         <title>Document</title>
     </head>
-    <body>
-        <div class=".container-fluid text-center">
+    <body class="spot">
+        <div class="container text-center">
             <div class="row">
                 <h1 class="text-primary">
                     특정 맛집 페이지
                 </h1>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4" style="border: 1px solid green;">
                     <ul class="list-unstyled">
                         <li class="bg-info">
                             <img class="img-rounded" src="../img/shefmark.jpg" style="width: 50px;"></img>
                             <span class="text-muted">유저 별 맛집 평가1</span>
-                            <span class="text-warning">평점 ***** </span>
+                            <span class="text-warning">평점 *****
+                            </span>
                         </li>
                         <li class="bg-info">
-                          <img class="img-rounded" src="../img/shefmark.jpg" style="width: 50px;"></img>
-                          <span class="text-muted">유저 별 맛집 평가1</span>
-                          <span class="text-warning">평점 ***** </span>
-                      </li>
+                            <img class="img-rounded" src="../img/shefmark.jpg" style="width: 50px;"></img>
+                            <span class="text-muted">유저 별 맛집 평가1</span>
+                            <span class="text-warning">평점 *****
+                            </span>
+                        </li>
                     </ul>
                 </div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                <div class="col-md-4" style="border: 1px solid red;">
+                    <div >
+                        <img id="main-spot-img" src="../img/shefmark.jpg" alt="메인 스폿 이미지">
+                    </div>
+                    <div >
+                        <div>맛집 이름</div>
+                        <div>총점 *****</div>
+                        <p>
+                            맛집 설명
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, possimus amet non dolore laboriosam fugiat exercitationem quam veritatis fuga ea, voluptatibus voluptates minus cupiditate perspiciatis culpa velit ex provident! Non.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4 spot-images" style="border: 1px solid blue;">
+                    <img src="../img/shefmark.jpg" alt="">
+                    <img src="../img/shefmark.jpg" alt="">
+                    <img src="../img/shefmark.jpg" alt="">
+                    <img src="../img/shefmark.jpg" alt="">
+                    <img src="../img/shefmark.jpg" alt="">
+                    <img src="../img/shefmark.jpg" alt="">
+                </div>
             </div>
-            <div class="row"></div>
+            <div class="row" style="border:3px solid purple">
+                <div class="visitor-info-area col-md-6">
+                    <img id="visitor-profile-img" src="../img/shefmark.jpg" style="border: 1px solid forestgreen;">
+                    <div id="visitor-nickName">탐방한 사람 이름</div>
+                    <div class="visitor-info" style="border:1px solid blue;">
+                        <div>탐방한 사람의 평점 *****</div>
+                        <p>
+                            탐방한 사람 소개 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem blanditiis id doloribus accusantium aliquam aperiam, officiis quo corrupti repudiandae corporis praesentium magni quis, delectus autem omnis quod veniam. Natus, omnis?
+                        </p>
+                    </div>    
+                </div>
+                <div class="col-md-6">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 home-list">
+                    <div><button class="btn btn-primary"> 로그인 홈</button></div>
+                    <div><button class="btn btn-primary">이 사람 맛집 리스트</button></div>
+                </div>
+            </div>
         </div>
+        <!--부트 스트랩-->
         <script src="../js/bootstrap.js"></script>
+        <!--custom.js-->
+        <script src="../custom.js"></script>
+        <!--slik slider-->
+        <script src="../js/slick/slick.js"></script>
     </body>
 </html>
