--- a/front/copyMe.html
+++ b/front/copyMe.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--jQuery-->
-        <script src="../js/jquery-2.1.4.js"></script>
+        <script src="/library/jquery-2.1.4.js"></script>
 
         <!--부트 스트랩-->
-        <link rel="stylesheet" href="../bootstrap.css">
-        <link rel="stylesheet" href="../bootstrap-theme.css">
+        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
 
         <!-- slick slider-->
         <link rel="stylesheet" href="../js/slick/slick.css">
