--- a/front/index.html
+++ b/front/index.html
@@ -4,15 +4,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="bootstrap.css">
-        <link rel="stylesheet" href="bootstrap-theme.css">
+        <link rel="stylesheet" href="bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" href="bootStrap/bootstrap.css">
         <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
     <body class="home">
         <div class=".container-fluid text-center">
             <div class="row">
-                <img class="img-circle" src="/img/shefmark.jpg" alt="" style="height: 100px;">
+                <div class="verticality">
+                </div>
+            </div>
+            <div class="row">
+                <img class="img-circle demo-img" alt="쉐프 마크" style="height: 100px;">
             </div>
             <div class="row">
                 <h1 class="text-primary">OurShef</h1>
@@ -23,17 +27,17 @@
             </div>
             <div class="row">
                 <div>
-                    <button class="btn btn-primary" onclick="location.href='/member/join.html'">
+                    <button class="btn btn-primary" onclick="location.href='#none'">
                         회원가입
                     </button>
                 </div>
                 <div>
-                    <button class="btn btn-primary" onclick="location.href='/login/loginForm.html'">
+                    <button class="btn btn-primary" onclick="location.href='#none'">
                         로그인
                     </button>
                 </div>
             </div>
         </div>
-        <script src="js/bootstrap.js"></script>
+        <script src="common.js"></script>
     </body>
 </html>
