--- a/front/copyMe.html
+++ b/front/copyMe.html
@@ -5,32 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--jQuery-->
-        <script src="/library/jquery-2.1.4.js"></script>
+         <!--jQuery-->
+         <script src="/library/jquery-2.1.4.js"></script>
 
-        <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-
-        <!-- slick slider-->
-        <link rel="stylesheet" href="../js/slick/slick.css">
-        <link rel="stylesheet" href="../js/slick/slick-theme.css">
-
-        <!--font awesome-->
-        <link rel="stylesheet" href="../js/fontawesome/all.min.css">
-        <script src="../js/fontawesome/all.js"></script>
-
-        <!--custom-->
-        <link rel="stylesheet" href="../style.css">
+         <!--부트 스트랩-->
+         <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
+         <link rel="stylesheet" href="../../bootStrap/bootstrap.css">
+ 
+         <!--custom-->
+         <link rel="stylesheet" href="../../style.css">
 
         <title>Document</title>
     </head>
     <body class="">
-        <!--부트 스트랩-->
-        <script src="../js/bootstrap.js"></script>
-        <!--custom.js-->
-        <script src="../custom.js"></script>
-        <!--slik slider-->
-        <script src="../js/slick/slick.js"></script>
+         <!--부트 스트랩-->
+         <script src="../../bootStrap/bootstrap.min.js"></script>
+         <!--custom.js-->
+         <script src="../../common.js"></script>
     </body>
 </html>
